Fix a typo for Democracy

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import Container from "./Container.astro";
     />
     <h1>
       For
-      <span>Democrasy</span>
+      <span>Democracy</span>
     </h1>
     <p>
       Lorem Ipsum is simply dummy text of the printing and typesetting industry.
