--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import NavigationBar from "../components/NavigationBar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to Astro">
   <NavigationBar />
   <Header />
   <ImagesRoll />
