--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@ import Container from "./Container.astro";
       the 1500s.
     </p>
     <br />
-    <Button text="Read more" variant="secondary" size="small" />
+    <Button variant="secondary" size="small" text="Read more" link="#aboutus" />
   </section>
 </Container>
 
