--- a/src/components/ImagesRoll.astro
+++ b/src/components/ImagesRoll.astro
@@ -11,6 +11,7 @@ const pictures: { default: string }[] = await Astro.glob(
         src={picture.default.replace("/public", "")}
         width="200"
         height="200"
+        alt="furdem"
       />
     ))
   }
