feat: download app

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import AboutUs from "../components/AboutUs.astro";
 import ActiveEvents from "../components/ActiveEvents.astro";
+import DownloadApp from "../components/DownloadApp.astro";
 import Header from "../components/Header.astro";
 import ImagesRoll from "../components/ImagesRoll.astro";
 import NavigationBar from "../components/NavigationBar.astro";
@@ -13,4 +14,5 @@ import Layout from "../layouts/Layout.astro";
   <ImagesRoll />
   <AboutUs />
   <ActiveEvents />
+  <DownloadApp />
 </Layout>
