refactor: score improvment

--- a/src/components/DownloadApp.astro
+++ b/src/components/DownloadApp.astro
@@ -7,10 +7,16 @@ import Container from "./Container.astro";
     <div class="wrapper">
       <div>
         <h2>Download our Application</h2>
-        <img src="/images/download.png" width="150" height="auto" class="mt" />
+        <img
+          src="/images/download.png"
+          width="154"
+          height="116"
+          class="mt"
+          alt="download app"
+        />
       </div>
       <div>
-        <img src="/images/app.jpg" width="500" height="auto" />
+        <img src="/images/app.jpg" width="450" height="500" alt="app screens" />
       </div>
     </div>
   </Container>
