--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import AboutUs from "../components/AboutUs.astro";
 import ActiveEvents from "../components/ActiveEvents.astro";
+import ContactUs from "../components/ContactUs.astro";
 import DownloadApp from "../components/DownloadApp.astro";
 import Header from "../components/Header.astro";
 import ImagesRoll from "../components/ImagesRoll.astro";
@@ -15,4 +16,5 @@ import Layout from "../layouts/Layout.astro";
   <AboutUs />
   <ActiveEvents />
   <DownloadApp />
+  <ContactUs />
 </Layout>
