--- a/src/components/DownloadApp.astro
+++ b/src/components/DownloadApp.astro
@@ -16,7 +16,13 @@ import Container from "./Container.astro";
         />
       </div>
       <div>
-        <img src="/images/app.jpg" width="450" height="500" alt="app screens" />
+        <img
+          src="/images/app.jpg"
+          width="450"
+          height="500"
+          alt="app screens"
+          class="app-image"
+        />
       </div>
     </div>
   </Container>
@@ -43,5 +49,19 @@ import Container from "./Container.astro";
   }
   .mt {
     margin-top: 35px;
+  }
+
+  @media (max-width: 600px) {
+    .wrapper {
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 30px 0;
+    }
+    h2 {
+      font-size: 7vw;
+    }
+    .app-image {
+      display: none;
+    }
   }
 </style>
