--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -86,7 +86,6 @@ import Container from "./Container.astro";
     text-align: left;
   }
   h2 {
-    font-size: 3vw;
     font-size: 40px;
     font-weight: bold;
   }
@@ -104,5 +103,20 @@ import Container from "./Container.astro";
     display: flex;
     align-items: center;
     column-gap: 10px;
+  }
+
+  @media (max-width: 600px) {
+    section {
+      width: 100%;
+    }
+    h2 {
+      font-size: 7vw;
+    }
+    div {
+      flex-direction: column;
+    }
+    div > a {
+      margin-top: 10px;
+    }
   }
 </style>
