--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ import Container from "./Container.astro";
   <section>
     <img
       src="/images/zanzendegi.jpg"
-      height="71"
-      width="200"
+      height="10%"
+      width="20%"
       alt="zanzendegi"
     />
     <h1>
@@ -47,5 +47,15 @@ import Container from "./Container.astro";
     font-size: 16px;
     font-weight: bold;
     margin-top: 30px;
+  }
+
+  @media (max-width: 600px) {
+    img {
+      width: 100px;
+    }
+    p {
+      width: 100%;
+      font-size: 15px;
+    }
   }
 </style>
