Initial text for about-us

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,15 +4,12 @@ import Container from "./Container.astro";
 
 <Container size="small">
   <section id="aboutus">
-    <h2>What we're doing?</h2>
+    <h2>Who we are?</h2>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an Lorem Ipsum is simply dummy text of the printing and
-      typesetting industry. Lorem Ipsum has been the industry's standard dummy
-      text ever since the 1500s, when an Lorem Ipsum is simply dummy text of the
-      printing and typesetting industry. Lorem Ipsum has been the industry's
-      standard dummy text ever since the 1500s, when an
+      We are a group of activists creating forDem, the censorship-resistant
+      sociopolitical network. Our team is transnational, heterarchical and 
+      committed to human rights and fundamental freedoms. Our main objective
+      is promotion of democractic states. 
     </p>
   </section>
 </Container>
