--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -52,7 +52,7 @@ import Container from "./Container.astro";
             stroke-linecap="round"
             stroke-linejoin="round"></path>
         </svg>
-        <p>furdem@gmail.com</p>
+        <p>forDem@gmail.com</p>
       </a>
       <a href="#">
         <svg
