--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -5,7 +5,7 @@ import Container from "./Container.astro";
 
 <Container size="big">
   <nav>
-    <h1>FurDem</h1>
+    <h1>forDem</h1>
     <div>
       <Button size="small" variant="secondary" text="Donate" />
     </div>
