--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,10 +16,9 @@ import Container from "./Container.astro";
       <span>Democracy</span>
     </h1>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s. Lorem Ipsum has been the industry's standard dummy text ever since
-      the 1500s.
+      forDem is a censorship-resistant e-Democracy platform. It combines all the main features of
+      e-democracy platforms namely networking, participation, deliberation and transparency features
+      plus the censorship-restance abilities like decentralisation, onion-routing etc.
     </p>
     <br />
     <Button variant="secondary" size="small" text="Read more" link="#aboutus" />
