--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -7,9 +7,8 @@ import Container from "./Container.astro";
     <h2>Contact us</h2>
     <br />
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an Lorem Ipsum is simply dummy text of the printing and
+      The best way to reach us is via <a href="https://github.com/tcfev/forDem/discussions">Discussions</a>.
+      For press contact and rest please send us a message or an e-Mail.
     </p>
     <div>
       <a href="#">
@@ -68,7 +67,7 @@ import Container from "./Container.astro";
             stroke-width="1.5"
             stroke-miterlimit="10"></path>
         </svg>
-        <p>+1 205 884 9230</p>
+        <p>+4955170894639</p>
       </a>
     </div>
   </section>
