--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -7,7 +7,7 @@ import Container from "./Container.astro";
     <h2>Contact us</h2>
     <br />
     <p>
-      The best way to reach us is via <a href="https://github.com/tcfev/forDem/discussions">Discussions</a>.
+      The best way to reach us is via <u><a href="https://github.com/tcfev/forDem/discussions">Discussions</a></u>.
       For press contact and rest please send us a message or an e-Mail.
     </p>
     <div>
