--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ActiveEvents from "../components/ActiveEvents.astro";
 import ContactUs from "../components/ContactUs.astro";
 import DownloadApp from "../components/DownloadApp.astro";
 import Header from "../components/Header.astro";
-import ImagesRoll from "../components/ImagesRoll.astro";
+import ImagesRoll from "../components/ImagesRoll.svelte";
 import NavigationBar from "../components/NavigationBar.astro";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -12,7 +12,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Fordem | For Democracy">
   <NavigationBar />
   <Header />
-  <ImagesRoll />
+  <ImagesRoll client:load />
   <AboutUs />
   <ActiveEvents />
   <DownloadApp />
