--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -6,10 +6,10 @@ import Container from "./Container.astro";
   <section id="aboutus">
     <h2>Who we are?</h2>
     <p>
-      We are a group of activists creating forDem, the censorship-resistant
-      sociopolitical network. Our team is transnational, heterarchical and 
-      committed to human rights and fundamental freedoms. Our main objective
-      is promotion of democractic states. 
+      We are an international group of activists creating a censorship-resistant
+      sociopolitical network. Our volunteer team is transnational, heterarchical and 
+      committed to human rights and fundamental freedoms.
+      Our main objective is promotion of democractic systems. 
     </p>
   </section>
 </Container>
