favicon, news section wip

--- a/src/components/ActiveEvents.astro
+++ b/src/components/ActiveEvents.astro
@@ -3,9 +3,7 @@ import Container from "./Container.astro";
 
 const MOCK_DATA = [
   { title: "How democratic is Heilbronn", link: "https://docs.google.com/document/d/1TLOEqupvUqbZKbLUvG8gzpsz5paJF7KVAoyDPw-Tq2o/edit" },
-  // { title: "Human chain" },
-  // { title: "Ban Tiktok! in russia" },
-  // { title: "Ukrain war protest in Munich" },
+  // { title: "", link: "" },
 ];
 ---
 
