updated app section

--- a/src/components/DownloadApp.astro
+++ b/src/components/DownloadApp.astro
@@ -6,23 +6,17 @@ import Container from "./Container.astro";
   <Container size="small">
     <div class="wrapper">
       <div>
-        <h2>Download our Application</h2>
-        <img
+        <h2>Mobile App is still WIP</h2>
+        <!-- <img
           src="/images/download.png"
           width="154"
           height="116"
           class="mt"
-          alt="download app"
-        />
+          alt="get the app"
+        /> -->
       </div>
       <div>
-        <img
-          src="/images/app.jpg"
-          width="450"
-          height="500"
-          alt="app screens"
-          class="app-image"
-        />
+        <h3>meanwhile you can use any <a href="https://joinmastodon.org/apps">Mastodon app</a> to connect to Fordem</h3>
       </div>
     </div>
   </Container>
