corrected the spellings

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Container from "./Container.astro";
       <span>Democracy</span>
     </h1>
     <p>
-      forDem is a censorship-resistant e-Democracy platform. It combines all the main features of
+      Fordem is a censorship-resistant e-Democracy platform. It combines all the main features of
       e-democracy platforms namely networking, participation, deliberation and transparency features
       plus the censorship-restance abilities like decentralisation, onion-routing etc.
       
