--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -7,7 +7,7 @@ import Container from "./Container.astro";
     <h2>Contact us</h2>
     <br />
     <p>
-      The best way to reach us is via <u><a href="https://github.com/tcfev/forDem/discussions">Discussions</a></u>.
+      The best way to reach us is via <u><a href="https://github.com/tcfev/Fordem/discussions">Discussions</a></u>.
       For press contact and rest please send us a message or an e-Mail.
     </p>
     <div>
@@ -51,7 +51,7 @@ import Container from "./Container.astro";
             stroke-linecap="round"
             stroke-linejoin="round"></path>
         </svg>
-        <p>forDem@transcf.org</p>
+        <p>Fordem@transcf.org</p>
       </a>
       <a href="#">
         <svg
