--- a/src/components/DownloadApp.astro
+++ b/src/components/DownloadApp.astro
@@ -6,7 +6,7 @@ import Container from "./Container.astro";
   <Container size="small">
     <div class="wrapper">
       <div>
-        <h2>Mobile App is still WIP</h2>
+        <h2>Mobile App is still WIP but</h2>
         <!-- <img
           src="/images/download.png"
           width="154"
