Wording, added GitHub

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -6,10 +6,10 @@ import Container from "./Container.astro";
   <section id="aboutus">
     <h2>Who we are?</h2>
     <p>
-      We are an international group of activists creating a censorship-resistant
+      we are developer & maintainer of this censorship-resistant
       sociopolitical network. Our volunteer team is transnational, heterarchical and 
       committed to human rights and fundamental freedoms.
-      Our main objective is promotion of democractic systems. 
+      We promote democractic systems. Find us on <a href="https://TransCF.org">TransCF</a> and <a href="https://github.com/tcfev/Fordem/discussions">GitHub</a>.
     </p>
   </section>
 </Container>
