Wording, added invitation

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -9,7 +9,7 @@ import Container from "./Container.astro";
       we are developer & maintainer of this censorship-resistant
       sociopolitical network. Our volunteer team is transnational, heterarchical and 
       committed to human rights and fundamental freedoms.
-      We promote democractic systems. Find us on <a href="https://TransCF.org">TransCF</a> and <a href="https://github.com/tcfev/Fordem/discussions">GitHub</a>.
+      Let us promote democractic systems together. Find us on <a href="https://TransCF.org">TransCF</a> and <a href="https://github.com/tcfev/Fordem/discussions">GitHub</a>.
     </p>
   </section>
 </Container>
