tried to add donate button

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -7,7 +7,9 @@ import Container from "./Container.astro";
   <nav>
     <h1>Fordem</h1>
     <div>
-      <Button size="small" variant="secondary" text="Donate" />
+      <a href="https://liberapay.com/tcfev">
+      <Button size="small" variant="secondary" text="Support"/>
+      </a>
     </div>
   </nav>
 </Container>
