--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -8,8 +8,7 @@ import Container from "./Container.astro";
     <h1>Fordem</h1>
     <div>
       <a href="https://liberapay.com/tcfev">
-      <Button size="small" variant="secondary" text="Support"/>
-      </a>
+      <Button size="small" variant="secondary" text="Support"/></a>
     </div>
   </nav>
 </Container>
