testing longer texts

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,10 +16,7 @@ import Container from "./Container.astro";
       <span>Democracy</span>
     </h1>
     <p>
-      Fordem is a censorship-resistant e-Democracy platform. It combines all the main features of
-      e-democracy platforms namely networking, participation, deliberation and transparency features
-      plus the censorship-restance abilities like decentralisation, onion-routing etc.
-      
+      Fordem, an abbreviation of ‘for democracy’, is a cross-platform digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities.
     </p>
     <br />
     <Button variant="secondary" size="small" text="Read more" link="#aboutus" />
