--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -11,6 +11,71 @@ import Container from "./Container.astro";
       committed to human rights and fundamental freedoms.
       Let us promote democractic systems together. Find us on <a href="https://TransCF.org">TransCF</a> and <a href="https://github.com/tcfev/Fordem/discussions">GitHub</a>.
     </p>
+    <h2>What do we want?</h2>
+    <p>
+      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client.
+      ForDem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact.
+      What can you do with Fordem?
+      You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities.
+
+
+      Fordem short-term goal:
+      Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation along the ongoing Women, Life, Freedom revolution in Iran. Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54 % of the population having (family) experiences with migration but none of the members of the local. 
+      In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world. 
+
+
+      The activists will have the possibility to:
+      Identify themselves through a pseudonymisation process done by a trusted third party,
+      Create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
+      Organise events and meetings, deliberate different aspects of the revolution
+      Initiate and take part in polls and surveys and figure out the social choice
+      Form local mesh wireless networks when internet and electricity is shut down 
+      How are we going to do that?
+      Fordem is an open-source platform. At its backend lies Nextodon, an extended version of Mastodon that we’ve written in C# with gRPC, crypto wallet, advanced votes, D2EE DMs and so on. As a mobile app, Fordem has large-scale mesh network formation abilities using WiFi, WFD and BT for the times of no internet, next to usual Mastodon. A DHT on the Nextodon takes care of synchronisation between databases of the networks that emerge from offline modes.
+
+
+      Development approach and timeline:
+
+      Line i
+
+      V.1
+      Mastodon App + Mastodon + Nextodon’s Registration|Authentication features
+      V.1.x
+      Fordem-specific features on top of Mastodon App + backend as above
+
+      Line ii
+      V.2x
+      Feature-complete Fordem Flutter App + feature-complete Nextodon
+
+      For more insights also check our issue tracker and documentation on Github: https://github.com/tcfev/Fordem
+      https://github.com/tcfev/Nextodon
+      2023 Timeline:
+        May 30, 2023
+      Release will include Nextodon
+      Nextodon’s Registration | Authentication features (Mnemonic phrases & crypto wallets) 
+      Basic Digital democracy functionalities 
+      Aug 1, 2023
+      enable Ethereum wallet
+      enable ranked-pairs, quadratic/fractional voting systems
+      enable Twitter authentication
+      Sep 1, 2023
+      integration of  Zemi - GIS
+      deliberation processes & instance as a service
+      Questionnaires & assisted networking
+      Nov 30, 2023
+      release Fordem Flutter app
+      enable mesh network formation features
+      Audio rooms
+      Who is behind the project?
+      We are a group of activists who believe in the great potential of Fordem and who are working towards the realisation of the project already for years. We met in a hackathon of Update Deutschland (Germany) and joined forces because we were working on similar ideas. Organizationally, Fordem is a project of Transnational Community Federation e. V. (TCF). TCF e.V. is a non-profit, not-governmental heterarchical civic innovation lab. With our interdisciplinary approach, we bring about positive changes in our communities around the world. We are active in various fields including promotion of education, the democratic state, and demarginalization. 
+      Here you can also meet some of us: link to video
+      For more information on TCF check www.transcf.org 
+      How can you support?
+      There are many ways in which you can support Fordem:
+      You can donate money and help us to cover the costs of the development of the first version of Fordem.
+      You can donate expertise and come and join us, and help with marketing, design, fundraising, project management experience and/or spreading good energy and love. 
+      You can donate your time and opinion and test Fordem as soon as the first version is out and give us your honest and constructive feedback. 
+    </p>
   </section>
 </Container>
 
