--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -8,7 +8,7 @@ import Container from "./Container.astro";
     <h1>Fordem</h1>
     <div>
       <a href="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link">
-      <Button size="small" variant="secondary" text="Support"/></a>
+      <Button size="small" variant="secondary" text="Donate"/></a>
     </div>
   </nav>
 </Container>
