--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,14 +4,12 @@ import Container from "./Container.astro";
 
 <Container size="small">
   <section id="aboutus">
-    <h2>Who we are?</h2>
+    <h2>Who we are & what we do?</h2>
     <p>
       we are developer & maintainer of this censorship-resistant
       sociopolitical network. Our volunteer team is transnational, heterarchical and 
       committed to human rights and fundamental freedoms.
       Let us promote democractic systems together. Find us on <a href="https://TransCF.org">TransCF</a> and <a href="https://github.com/tcfev/Fordem/discussions">GitHub</a>.
-
-    <h2>What do we want?</h2>
 
       Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client.
       ForDem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact.
