--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -7,8 +7,7 @@ import Container from "./Container.astro";
   <nav>
     <h1>Fordem</h1>
     <div>
-      
-      <Button size="small" variant="secondary" text="Donate" link="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link/>
+      <a href="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link">Donate</a>
     </div>
   </nav>
 </Container>
