--- a/src/components/ActiveEvents.astro
+++ b/src/components/ActiveEvents.astro
@@ -10,9 +10,7 @@ const MOCK_DATA = [
 <Container size="small">
   <aside>
     <h2>
-      Active projects &
-      <br />
-      news
+      Active projects & News
     </h2>
     <p></p>
   </aside>
