Minor changes. ready for now

--- a/src/components/ActiveEvents.astro
+++ b/src/components/ActiveEvents.astro
@@ -9,9 +9,7 @@ const MOCK_DATA = [
 
 <Container size="small">
   <aside>
-    <h2>
-      Active projects & News
-    </h2>
+    <h2>Active projects & News</h2>
     <p></p>
   </aside>
 </Container>
