removed one nav

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -9,9 +9,9 @@ import Container from "./Container.astro";
     <div>
       <a href="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link">Donate</a>
     </div>
-    <div>
+    <!-- <div>
       <a href="https://app.fordem.org/public/local">Got to App!</a>
-    </div>
+    </div> -->
   </nav>
 </Container>
 
