--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -7,7 +7,7 @@ import Container from "./Container.astro";
   <nav>
     <h1>Fordem</h1>
     <div>
-      <a href="https://app.fordem.org/public/local">Got to App!</a>
+      <a href="https://app.fordem.org/public/local">Go to App!</a>
     </div>
     <div>
       <a href="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link">Donate</a>
