--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -10,7 +10,7 @@ import Container from "./Container.astro";
       <a href="https://app.fordem.org/public/local">Go to App!</a>
     </div>
     <div>
-      <a href="https://www.betterplace.org/de/projects/123115?utm_campaign=user_share&utm_medium=ppp_sticky&utm_source=Link">Donate</a>
+      <a href="https://www.betterplace.org/en/projects/123115">Donate</a>
     </div>
   </nav>
 </Container>
