linked TCF's imprint

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -12,6 +12,9 @@ import Container from "./Container.astro";
     <div>
       <a href="https://www.betterplace.org/en/projects/123115">Donate</a>
     </div>
+    <div>
+      <a href="https://transcf.org/en/blog/64">Imprint</a>
+    </div>
   </nav>
 </Container>
 
