english description update

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -7,27 +7,20 @@ import Container from "./Container.astro";
     <h2>Who, what, why…?</h2>
     <p>
       <u>Who is behind the project?</u><br>
-      we are the developers of this censorship-resistant
-      sociopolitical network. Our volunteer team is transnational, heterarchical and 
-      committed to human rights and fundamental freedoms.
-      <br>
-      <br>
-      We met in a hackathon of Update Deutschland and joined forces and expanded globally because we were working on similar ideas. Organizationally, Fordem is a project of Transnational Community Federation e. V. (TCF). TCF is a non-profit, not-governmental heterarchical civic innovation Lab. With our interdisciplinary approach, we bring about positive changes in our communities around the world. We are active in various fields including promotion of education, democratic systems, and demarginalization.
+      We are the developers of this censorship-resistant sociopolitical network. Our volunteer team is transnational, heterarchical and committed to human rights and fundamental freedoms. 
+
+      We met in a hackathon of Update Deutschland and joined forces and expanded globally because we were working on similar ideas. Organizationally, Fordem is a project of Transnational Community Federation e. V. (TCF). TCF is a non-profit, not-governmental heterarchical civic innovation Lab. With our interdisciplinary approach, we bring about positive changes in our communities around the world. We are active in various fields including promotion of education, democratic systems, and demarginalization. For more information check www.transcf.org
       <br> 
       <br>
       <u>How can you support?</u><br>
-      There are many ways in which you can support Fordem:
-      You can donate money and help us to cover the costs of the development of the first version of Fordem.
-      You can donate expertise and come and join us, and help with marketing, design, fundraising, project management experience and/or spreading good energy and love. 
-      You can donate your time and opinion and test Fordem as soon as the first version is out and give us your honest and constructive feedback.<br>
+      There are many ways in which you can support Fordem: You can donate money and help us to cover the costs of the development of the first version of Fordem. You can donate expertise and come and join us, and help with marketing, design, fundraising, project management experience and/or spreading good energy and love. You can donate your time and opinion and test Fordem as soon as the first version is out and give us your honest and constructive feedback.<br>
       <br>
       Let us promote democractic systems together. Find us on<br>
         <a href="https://TransCF.org"><u>TransCF</u></a> & 
-        <a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a><br><br>
-      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client.
-      ForDem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact.
-      What can you do with Fordem?
-      You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities.
+        <a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a>
+      <br>
+      <br>
+      Fordem short-term goal: Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation along the ongoing Women, Life, Freedom revolution in Iran. Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54 % of the population having (family) experiences with migration but none of the members of the local. In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world. 
       <br>
       <br>
       Fordem short-term goal:
@@ -40,7 +33,9 @@ import Container from "./Container.astro";
       Create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
       Organise events and meetings, deliberate different aspects of the revolution
       Initiate and take part in polls and surveys and figure out the social choice
-      Form local mesh wireless networks when internet and electricity is shut down 
+      Form local mesh wireless networks when internet and electricity is shut down
+      <br>
+      <br
       How are we going to do that?
       Fordem is an open-source platform. At its backend lies Nextodon, an extended version of Mastodon that we’ve written in C# with gRPC, crypto wallet, advanced votes, D2EE DMs and so on. As a mobile app, Fordem has large-scale mesh network formation abilities using WiFi, WFD and BT for the times of no internet, next to usual Mastodon. A DHT on the Nextodon takes care of synchronisation between databases of the networks that emerge from offline modes.
       <br>
@@ -49,7 +44,7 @@ import Container from "./Container.astro";
       https://github.com/tcfev/Fordem<br>
       https://github.com/tcfev/Nextodon<br>
       <br>
-      <b><u>2023 Timeline:</u></b><br>
+      <b><u>Development timeline:</u></b><br>
       June 30, 2023<br>
       Release will include Nextodon<br>
       Nextodon’s Registration | Authentication features (Mnemonic phrases & crypto wallets) <br>
@@ -69,7 +64,7 @@ import Container from "./Container.astro";
       release Fordem Flutter app<br>
       enable mesh network formation features<br>
       Audio rooms<br><br>
-      <u>Development pipelines & timeline:</u><br>
+      <u>Development pipelines:</u><br>
       <br>
     </p>
   </section>
