--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -8,7 +8,7 @@ import Container from "./Container.astro";
     <br />
     <p>
       The best way to reach us is via GitHub <u><a href="https://github.com/tcfev/Fordem/discussions">Discussions</a></u>.
-      For press contact and rest please send us a message or an e-Mail.
+      For press contact or any other questions please send us a message or an email.
     </p>
     <div>
       <a href="#">
