--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -20,31 +20,30 @@ import Container from "./Container.astro";
         <a href="https://github.com/tcfev/Fordem/discussions"><u>GitHub</u></a>
       <br>
       <br>
-      Fordem short-term goal: Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation along the ongoing Women, Life, Freedom revolution in Iran. Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54 % of the population having (family) experiences with migration but none of the members of the local. In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world. 
+      <u>What is Fordem?</u><br>
+      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client. ForDem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact. What can you do with Fordem? You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities. 
+      <br>
+    <u>Fordem short-term goal:</u><br>
+      Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation along the ongoing Women, Life, Freedom revolution in Iran. Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54% of the population having (family) experiences with migration but none of the members of the local. In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world.
       <br>
       <br>
-      Fordem short-term goal:
-      Fordem is a tool which can help the development of any community since it can be adapted to the respective needs and contexts. In our first version we are invested in providing the Iranian political activists the tools they will need at each of the networking, deliberation and participation stages of their mobilisation along the ongoing Women, Life, Freedom revolution in Iran. Furthermore, we are invested in implementing Fordem in communities with a democratic gap in Germany. Our focus is on Heilbronn, a city with more than 54 % of the population having (family) experiences with migration but none of the members of the local. 
-      In the long term Fordem has the potential to be the tool for any community worldwide and connect an endless number of communities with each other. In this sense it can strengthen local communities while connecting them with the world. 
-      <br>
-      <br>
-      The activists will have the possibility to:
+    <u>The activists will have the possibility to:</u><br>
       Identify themselves through a pseudonymisation process done by a trusted third party,
-      Create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
-      Organise events and meetings, deliberate different aspects of the revolution
+      create and interactively flesh out their multifaceted profile and connect with people who strive for similar changes as they do,
+      organise events and meetings, deliberate different aspects of the revolution
       Initiate and take part in polls and surveys and figure out the social choice
       Form local mesh wireless networks when internet and electricity is shut down
       <br>
-      <br
-      How are we going to do that?
-      Fordem is an open-source platform. At its backend lies Nextodon, an extended version of Mastodon that we’ve written in C# with gRPC, crypto wallet, advanced votes, D2EE DMs and so on. As a mobile app, Fordem has large-scale mesh network formation abilities using WiFi, WFD and BT for the times of no internet, next to usual Mastodon. A DHT on the Nextodon takes care of synchronisation between databases of the networks that emerge from offline modes.
+      <br>
+    <u>How are we going to do that?</u><br>
+      Fordem is an open-source platform. At its backend lies Nextodon, an extended version of Mastodon that we have written in C# with gRPC, crypto wallet, advanced votes, D2EE DMs and so on. As a mobile app, Fordem has large-scale mesh network formation abilities using WiFi, WFD and BT for the times of no internet, next to usual Mastodon. A DHT on the Nextodon takes care of synchronisation between databases of the networks that emerge from offline modes.
       <br>
       <br>
       For more insights also check our issue tracker and documentation on Github:<br>
       https://github.com/tcfev/Fordem<br>
       https://github.com/tcfev/Nextodon<br>
       <br>
-      <b><u>Development timeline:</u></b><br>
+      <u>Development timeline:</u><br>
       June 30, 2023<br>
       Release will include Nextodon<br>
       Nextodon’s Registration | Authentication features (Mnemonic phrases & crypto wallets) <br>
