Edited the meta description

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import Container from "./Container.astro";
       <span>Democracy</span>
     </h1>
     <p>
-      Fordem, an abbreviation of ‘for democracy’, is a cross-platform digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities.
+      Fordem, an abbreviation of ‘for democracy’, is a digital democracy and socio-political mobilisation platform, with participation, deliberation, and networking functionalities.
     </p>
     <br />
     <Button variant="secondary" size="small" text="Read more" link="#aboutus" />
