--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -21,7 +21,7 @@ import Container from "./Container.astro";
       <br>
       <br>
       <u>What is Fordem?</u><br>
-      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client. ForDem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact. What can you do with Fordem? You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities. 
+      Fordem app (WIP) forms independent WiFi-Direct & Bluetooth mesh networks when the internet and cellular networks are down, respects privacy and is oriented on data security. Fordem is a part of Fediverse and can be used as app on your smartphone or as desktop-client. Fordem aims to be the main channel for networking and conversations of resistance and resilience, social struggles and sociopolitical mobilisation, and it is there to make the voices of civil society movements heard and to maximise their impact. What can you do with Fordem? You can connect with others based on your shared interests, exchange ideas, initiate or join groups and organise for the changes you want to see in your neighbourhood or in the world. Fordem can connect an endless number of communities. 
       <br>
       <br>
     <u>Fordem short-term goal:</u><br>
