--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -6,7 +6,7 @@ import Container from "./Container.astro";
   <nav>
     <h1>Fordem</h1>
     <div>
-      <a href="https://app.fordem.org/public/local">Go to App!</a>
+      <a href="https://app.fordem.org/public/local">Go to web app!</a>
     </div>
     <div>
       <a href="https://www.betterplace.org/en/projects/123115">Donate</a>
